--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
-    "start": "node index.js",
+    "dist": "npm tsc",
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
     "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.4.1",
     "husky": "^9.1.4",
-    "lint-staged": "^15.2.9"
+    "lint-staged": "^15.2.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
