feat: Commitlint setup

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^22.4.1",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.9",
