feat: Setup eslint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dist": "npm tsc",
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js",
-    "prepare": "husky"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
