--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "lint-staged": {
-    "*.ts": "npm run lint:fix"
+    "*.ts": [
+      "npm run lint:fix"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
