--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/server.js",
   "scripts": {
     "dist": "npm tsc",
-    "dev": "nodemon src/server.ts",
-    "start": "node dist/server.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "lint": "eslint",
+    "lint:fix": "eslint  --fix",
     "formate:check": "prettier --check",
     "format:fix": "prettier . --fix",
     "prepare": "husky install"
@@ -38,5 +38,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.2.0"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv-flow": "^4.1.0"
   }
 }
