--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.9.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "dotenv-flow": "^4.1.0"
+    "dotenv-flow": "^4.1.0",
+    "express": "^4.19.2"
   }
 }
