--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ ENV=devlopment
 PORT = 8080
 SERVER_URL = http://localhost:8080
 
-DATABASE_URL =
+DATABASE_URL = mongodb+srv://Akash7420987728:Akash554545454dkhbcjhbsdcjb2005@akash.bawi1qx.mongodb.net/backend_setup?retryWrites=true&w=majority&appName=akash
