--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
+    "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^9.9.0",
@@ -41,8 +42,12 @@
     "typescript-eslint": "^8.2.0"
   },
   "dependencies": {
+    "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3",
+    "source-map-support": "^0.5.21",
+    "winston": "^3.14.2"
   }
 }
