--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "lint:fix": "eslint  --fix",
     "formate:check": "prettier --check",
     "format:fix": "prettier . --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migrate:create": "node script/migration.js create",
+    "migrate:up": "node script/migration.js up",
+    "migrate:down": "node script/migration.js down",
+    "migrate:list": "node script/migration.js list",
+    "migrate:prune": "node script/migration.js prune",
+    "migrate:dev": "cross-env MIGRATE_MODE=development npm run migrate:create",
+    "migrate:prod": "cross-env MIGRATE_MODE=production npm run migrate:create"
   },
   "keywords": [],
   "author": "",
@@ -46,8 +53,10 @@
     "cross-env": "^7.0.3",
     "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "mongoose": "^8.5.3",
     "source-map-support": "^0.5.21",
+    "ts-migrate-mongoose": "^3.8.3",
     "winston": "^3.14.2",
     "winston-mongodb": "^5.1.1"
   }
