--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,8 @@ PORT = 8080
 SERVER_URL = http://localhost:8080
 
 # Datebase
-DATABASE_URL = mongodb+srv://Akash7420987728:Akash554545454dkhbcjhbsdcjb2005@akash.bawi1qx.mongodb.net/backend_setup?retryWrites=true&w=majority&appName=akash
+DATABASE_URL =
 
 # Migration
-MIGRATE_MONGO_URI = mongodb+srv://Akash7420987728:Akash554545454dkhbcjhbsdcjb2005@akash.bawi1qx.mongodb.net/backend_setup?retryWrites=true&w=majority&appName=akash
+MIGRATE_MONGO_URI = 
 MIGRATE_AUTOSYNC = "true"
