--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,8 @@ PORT = 8080
 SERVER_URL = http://localhost:8080
 
 # Database
-DATABASE_URL = 
+DATABASE_URL = "mongodb+srv://Akash7420987728:Akash554545454dkhbcjhbsdcjb2005@akash.bawi1qx.mongodb.net/?retryWrites=true&w=majority&appName=akash"
 
 # Migration
-MIGRATE_MONGO_URI = 
+MIGRATE_MONGO_URI = "mongodb+srv://Akash7420987728:Akash554545454dkhbcjhbsdcjb2005@akash.bawi1qx.mongodb.net/?retryWrites=true&w=majority&appName=akash"
 MIGRATE_AUTOSYNC = "true"
